--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -17,19 +17,19 @@
   become: yes
 
   tasks:
-    - name: copy Dockerfile
-      copy:
-        src: ./dev/Dockerfile
-        dest: /home/pcadm/Dockerfile
+   - name: copy Dockerfile
+     copy:
+       src: ./dev/Dockerfile
+       dest: /home/pcadm/Dockerfile
      
-    - name: copy s3cfg
-      copy:
-        src: /home/pcadm/.s3cfg
-        dest: /home/pcadm/.s3cfg
+   - name: copy s3cfg
+     copy:
+       src: /home/pcadm/.s3cfg
+       dest: /home/pcadm/.s3cfg
        
-    - name: Build dev image
-      docker_image:
-        build:
-          path: /home/pcadm/
-        name: dev-mvn-alpine  
-        source: build        
+   # - name: Build dev image
+   #   docker_image:
+   #     build:
+   #       path: /home/pcadm/
+   #     name: dev-mvn-alpine  
+   #     source: build        
