checking delegate_to

--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -33,8 +33,6 @@
        path: /home/pcadm/
        name: dev-mvn-alpine  
        source: build
-     delegate_to: "{{ item }}"
-     delegate_facts: true
-     loop: "{{ groups['dev'] }}"  
+     delegate_to: "{{ dev | first }}"
      
               
