fix .s3cfg placement for prod

--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -56,7 +56,7 @@
    - name: copy s3cfg
      copy:
        src: /home/pcadm/.s3cfg
-       dest: /home/pcadm/.s3cfg
+       dest: /root/.s3cfg
 
    - name: download war file
      shell:
