registry login check

--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -91,4 +91,5 @@
        registry: cr.yandex
        username: json_key
        password: "{{ lookup('file', 'key.json') }}"
-       reauthorize: yes            
+       reauthorize: yes
+     delegate_to: "{{ groups.prod[0] }}"              
