--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -92,4 +92,13 @@
        username: json_key
        password: " {{ lookup('file', '/home/pcadm/key.json')}}"
        reauthorize: yes
-     delegate_to: "{{ groups.prod[0] }}"              
+     delegate_to: "{{ groups.prod[0] }}"
+
+
+   - name: publish to YC registry
+     docker_image:
+       name: prod-tomcat-alpine
+       repository: cr.yandex
+       tag: latest
+       push: yes
+     delegate_to: "{{ groups.prod[0] }}"               
