--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -98,7 +98,7 @@
    - name: publish to YC registry
      docker_image:
        name: prod-tomcat-alpine
-       repository: cr.yandex
+       repository: cr.yandex/crp12ct5a0klh8dah1hc
        tag: latest
        push: yes
      delegate_to: "{{ groups.prod[0] }}"               
