--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -106,7 +106,8 @@
 
    - name: pull image from YC registry
      docker_container:
-       name: cr.yandex/crp12ct5a0klh8dah1hc/prod-tomcat-alpine:latest
+       name: boxfuse-tomcat
+       image: cr.yandex/crp12ct5a0klh8dah1hc/prod-tomcat-alpine:latest
        ports:
         - "8080:8080" 
      delegate_to: "{{ groups.prod[0] }}"              
