--- a/dev-prod-docker.yml
+++ b/dev-prod-docker.yml
@@ -82,6 +82,7 @@
   hosts: prod
   become: yes
   vars:
+    reg_image: cr.yandex/crp12ct5a0klh8dah1hc/prod-tomcat-alpine
     reg_key: /home/pcadm/key.json
  
   tasks:
@@ -101,7 +102,7 @@
    - name: publish to YC registry
      docker_image:
        name: prod-tomcat-alpine
-       repository: cr.yandex/crp12ct5a0klh8dah1hc/prod-tomcat-alpine
+       repository: "{{ reg_image }}"
        tag: "{{ image_version }}" 
        push: yes
        source: local
@@ -110,7 +111,7 @@
    - name: pull image from YC registry
      docker_container:
        name: boxfuse-tomcat
-       image: cr.yandex/crp12ct5a0klh8dah1hc/prod-tomcat-alpine:"{{ image_version }}" 
+       image: "{{ reg_image }}:{{ image_version }}" 
        ports:
         - "8080:8080" 
      delegate_to: "{{ groups.prod[0] }}"              
